@@ -4,9 +4,9 @@ package DBD::mysql::GetInfo;
 #
 #
 # Generated by DBI::DBD::Metadata
-# $Author: capttofu $  <-- the person to blame
-# $Revision: 8435 $
-# $Date: 2006-12-23 14:03:49 -0500 (Sat, 23 Dec 2006) $
+# $Author: rlippan $  <-- the person to blame
+# $Revision: 1108 $
+# $Date: 2003-03-31 20:17:27 -0500 (Mon, 31 Mar 2003) $
 
 use strict;
 use DBD::mysql;
